--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.webview">
-
     <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="Sure Parts"
+        android:label="Mboalab"
         android:name="${applicationName}"
        android:usesCleartextTraffic="true"
         android:icon="@mipmap/launcher_icon">
